--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "express": "^4.19.2"
-  }
+"dependencies": {
+  "express": "^4.19.2",
+  "pg": "^8.11.5"
+}
 }
